Wed May 02 01:44:36 2001  George Lebl <jirka@5z.com>

	* config/Gnome.in, config/Xsession: don't use bash -login, because we
	  have already ran a login shell which was the users login shell

	* config/gnomerc.in, daemon/slave.c: use exec to avoid running 2
	  unneeded shells.  Now if you log in there is no extra shell process
	  running.  This saves quite a bit of ram in fact since things like
	  bash eat up quite a bit of ram, and if the user doesn't use any
	  shells, none of it is shared.

	* daemon/slave.c:  Fix a doh! error in the last commit where I got
	  confused about which sessions I was talking about (gsm vs. gdm),
	  also a little bit of cleanup

Tue May 01 16:28:17 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/gdm.h, daemon/slave.c, gui/gdmconfig.c,
	  gui/gdmlogin.c:  Make it possible to log in even if the sessions
	  directory is missing or empty.  Of course if that happens the
	  user gets a "you're an idiot and your setup's b0rk" warning dialog
	  (well not in those exact words)

Tue May 01 14:41:03 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.c: instead of a define, read a
	  DOING_GDMCONFIG_DEVELOPMENT env var.

	* gui/gdmconfig.c, gui/gdmlogin.c: ignore sessions ending in .deleted
	  and .desc

	* gui/gdmconfig.c, gui/gdmlogin.c:  Session names ARE case sensitive
	  so remove all this case insensitivity crap that could seriously mess
	  things up.  The only case insensitive thing is that the default
	  link can be case insensitive, the actual files are sensitive.

	* gui/gdmconfig.(c|h|glade): fix an assload of stuff with respect to
	  the Session directory editting.  Not all tested though, so still
	  use at your own risk.  Though it theoretically has less problems
	  now.  Also cleaned up stuff a tiny bit.  This file could use a run
	  trhough indent.

Mon Apr 30 17:27:11 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: fix a couple of possible crashes with invalid images