@@ -1,3 +1,8 @@
+Wed May 02 03:15:15 2001  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c: fix running of gdmconfig by seetuid/gid to 0
+	  and give an error dialog box if the configurator is not found
+
 Wed May 02 01:44:36 2001  George Lebl <jirka@5z.com>
 
 	* config/Gnome.in, config/Xsession: don't use bash -login, because we
